--- a/style.css
+++ b/style.css
@@ -20,24 +20,34 @@ h1 {
 }
 
 form {
-  background-color: orange;
+  /* background-color: orange; */
   text-align: center;
   display: flex;
   justify-content: center;
   gap: 20px;
-
+  width: 90%;
+  margin: auto;
 }
 
 form div {
-/*   background-color: blue; */
+  /* background-color: blue; */
   display: flex;
   flex-direction: column;
-  
+  width: 30%;
+  margin-right: 0px;
 }
+
 form > div {
 /*   background-color: pink; */
   text-align: left;
 }
+
 input {
-  width: 300px;
+  width: 100%;
+  height: 20px;
+}
+
+#submit {
+    /* width: 60%; */
+    height: 26px;
 }
