--- a/style.css
+++ b/style.css
@@ -15,18 +15,20 @@ h1 {
   border-radius: 20px;
   width: 140px;
   height: 50px;
-  border: 1px solid black;
-
+  border-style: none;  
+  cursor: pointer;
+  
 }
 
 form {
   /* background-color: orange; */
   text-align: center;
-  display: flex;
+  /* display: flex; */
   justify-content: center;
   gap: 20px;
   width: 90%;
   margin: auto;
+  display: none;
 }
 
 form div {
@@ -34,7 +36,7 @@ form div {
   display: flex;
   flex-direction: column;
   width: 30%;
-  margin-right: 0px;
+
 }
 
 form > div {
