--- a/style.css
+++ b/style.css
@@ -90,7 +90,9 @@ h3 {
 .card {
   background-color: orange;
   height: 200px;
-  
+  padding: 20px;
+  padding-left: 15px;
+  line-height: 35px;
 }
 
 button[type=submit] {
