--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@ header {
   background-color: #00C9A9;
   height: 60px;
   font-size: 2rem;
-  /* margin-bottom: 25px;   */
   color: white;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .add_book {
@@ -15,6 +15,8 @@ header {
   position: relative;
   top: 20px;
   margin-bottom: 30px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
 }
 
 .add_book button {
@@ -23,25 +25,23 @@ header {
   height: 50px;
   border-style: none;  
   cursor: pointer;
-  
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
 }
 
 form {
-  /* background-color: orange; */
   text-align: center;
-  /* display: flex; */
   justify-content: center;
   gap: 20px;
   width: 90%;
   margin: auto;
   display: none;
-
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   position: relative;
   top: -12px;
 }
 
 form div {
-  /* background-color: blue; */
   display: flex;
   flex-direction: column;
   width: 30%;
@@ -49,18 +49,18 @@ form div {
 }
 
 form > div {
-/*   background-color: pink; */
   text-align: left;
 }
 
 input {
   width: 100%;
   height: 20px;
+  margin-top: 5px;
+  
 }
 
 #submit {
-    /* width: 60%; */
-    height: 26px;
+  height: 26px;
 }
 
 .cards_container {
@@ -80,7 +80,6 @@ input {
   margin: auto;
   position: relative;
   top: 10px;
-  /* margin-top: 25px; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -98,12 +97,14 @@ h3 {
 }
 
 .card {
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
+  gap: 10px;
   background-color: darkcyan;
-  height: 300px;
+  height: 270px;
   padding: 20px;
   padding-left: 15px;
-  line-height: 40px;
-  font-size: 1rem;
+  font-size: 0.9rem;
   color: white;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
@@ -112,10 +113,8 @@ h3 {
 .card button {
   margin-right: 10px;
   font-size: 0.8rem;
-  width: 110px;
-  position: relative;
-  top: 20px;
-  
+  width: 150px;
+  height: 30px;
 }
 
 button[type=submit] {
@@ -127,4 +126,3 @@ button[type=submit] {
 .newTitle {
   font-size: 1.7rem;  
 }
-/* bottom space between cards is too much try fix that */
